# Project-2a---Speedy-Dictionary

./: .gitignore  CMakeLists.txt  README.md  main.cpp
b_tree/: b_tree.cpp  b_tree.h
backend/: CMakeLists.txt  Dockerfile  main.cpp
backend/b_tree/: b_tree.cpp  b_tree.h
backend/csv_parsing/: csv-importer.cpp  csv-importer.h
backend/measurement/: measurement.cpp
backend/rb_tree/: red-black.cpp  red-black.h
frontend/: README.md  package-lock.json
frontend/src/app/: page.tsx
frontend/src/app/components/: b-tree-fact.tsx  search-comparison-cards.tsx  search-comparison.tsx  search.tsx
frontend/src/app/lib/: api.ts
measurement/: measurement.h
speedy-dictionary/: package-lock.json  package.json
speedy-dictionary/src/app/: page.tsx
speedy-dictionary/src/app/components/: b-tree-fact.tsx  header.tsx  search-comparison-cards.tsx  search-comparison.tsx  search.tsx
